Fix label alignment on JqueryUI selectmenu

--- a/content/css/screenshot.less
+++ b/content/css/screenshot.less
@@ -16,6 +16,14 @@
 .ui-state-default .ui-icon {
   background-image: url("../images/ui-icons_222222_256x240.png");
 }
+#account-select-button {
+  vertical-align: middle;
+  width: 25% !important;
+}
+#rr-select-button {
+  vertical-align: middle;
+  width: 50% !important;
+}
 #loading-div {
   display: none;
   text-align: center;
